# api/server/models/by_hours_schedule_scan_config.go
@@ -1,0 +1,163 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"bytes"
+	"context"
+	"encoding/json"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// ByHoursScheduleScanConfig by hours schedule scan config
+//
+// swagger:model ByHoursScheduleScanConfig
+type ByHoursScheduleScanConfig struct {
+
+	// hours interval
+	// Minimum: 1
+	HoursInterval int64 `json:"hoursInterval,omitempty"`
+}
+
+// ScheduleScanConfigType gets the schedule scan config type of this subtype
+func (m *ByHoursScheduleScanConfig) ScheduleScanConfigType() string {
+	return "ByHoursScheduleScanConfig"
+}
+
+// SetScheduleScanConfigType sets the schedule scan config type of this subtype
+func (m *ByHoursScheduleScanConfig) SetScheduleScanConfigType(val string) {
+}
+
+// UnmarshalJSON unmarshals this object with a polymorphic type from a JSON structure
+func (m *ByHoursScheduleScanConfig) UnmarshalJSON(raw []byte) error {
+	var data struct {
+
+		// hours interval
+		// Minimum: 1
+		HoursInterval int64 `json:"hoursInterval,omitempty"`
+	}
+	buf := bytes.NewBuffer(raw)
+	dec := json.NewDecoder(buf)
+	dec.UseNumber()
+
+	if err := dec.Decode(&data); err != nil {
+		return err
+	}
+
+	var base struct {
+		/* Just the base type fields. Used for unmashalling polymorphic types.*/
+
+		ScheduleScanConfigType string `json:"ScheduleScanConfigType,omitempty"`
+	}
+	buf = bytes.NewBuffer(raw)
+	dec = json.NewDecoder(buf)
+	dec.UseNumber()
+
+	if err := dec.Decode(&base); err != nil {
+		return err
+	}
+
+	var result ByHoursScheduleScanConfig
+
+	if base.ScheduleScanConfigType != result.ScheduleScanConfigType() {
+		/* Not the type we're looking for. */
+		return errors.New(422, "invalid ScheduleScanConfigType value: %q", base.ScheduleScanConfigType)
+	}
+
+	result.HoursInterval = data.HoursInterval
+
+	*m = result
+
+	return nil
+}
+
+// MarshalJSON marshals this object with a polymorphic type to a JSON structure
+func (m ByHoursScheduleScanConfig) MarshalJSON() ([]byte, error) {
+	var b1, b2, b3 []byte
+	var err error
+	b1, err = json.Marshal(struct {
+
+		// hours interval
+		// Minimum: 1
+		HoursInterval int64 `json:"hoursInterval,omitempty"`
+	}{
+
+		HoursInterval: m.HoursInterval,
+	})
+	if err != nil {
+		return nil, err
+	}
+	b2, err = json.Marshal(struct {
+		ScheduleScanConfigType string `json:"ScheduleScanConfigType,omitempty"`
+	}{
+
+		ScheduleScanConfigType: m.ScheduleScanConfigType(),
+	})
+	if err != nil {
+		return nil, err
+	}
+
+	return swag.ConcatJSON(b1, b2, b3), nil
+}
+
+// Validate validates this by hours schedule scan config
+func (m *ByHoursScheduleScanConfig) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateHoursInterval(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ByHoursScheduleScanConfig) validateHoursInterval(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.HoursInterval) { // not required
+		return nil
+	}
+
+	if err := validate.MinimumInt("hoursInterval", "body", m.HoursInterval, 1, false); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validate this by hours schedule scan config based on the context it is used
+func (m *ByHoursScheduleScanConfig) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ByHoursScheduleScanConfig) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ByHoursScheduleScanConfig) UnmarshalBinary(b []byte) error {
+	var res ByHoursScheduleScanConfig
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
