# api/server/models/runtime_schedule_scan_config.go
@@ -6,9 +6,13 @@ package models
 // Editing this file might prove futile when you re-run the swagger generate command
 
 import (
+	"bytes"
 	"context"
+	"encoding/json"
+	"io"
 
 	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
 	"github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
 )
@@ -24,22 +28,96 @@ type RuntimeScheduleScanConfig struct {
 	// namespaces
 	Namespaces []string `json:"namespaces"`
 
-	// scan interval
-	ScanInterval *ScanInterval `json:"scanInterval,omitempty"`
+	scanConfigTypeField RuntimeScheduleScanConfigType
+}
 
-	// scan time
-	ScanTime ScanTime `json:"scanTime,omitempty"`
+// ScanConfigType gets the scan config type of this base type
+func (m *RuntimeScheduleScanConfig) ScanConfigType() RuntimeScheduleScanConfigType {
+	return m.scanConfigTypeField
+}
+
+// SetScanConfigType sets the scan config type of this base type
+func (m *RuntimeScheduleScanConfig) SetScanConfigType(val RuntimeScheduleScanConfigType) {
+	m.scanConfigTypeField = val
+}
+
+// UnmarshalJSON unmarshals this object with a polymorphic type from a JSON structure
+func (m *RuntimeScheduleScanConfig) UnmarshalJSON(raw []byte) error {
+	var data struct {
+		DockerCISBenchmarkScan bool `json:"dockerCISBenchmarkScan,omitempty"`
+
+		Namespaces []string `json:"namespaces"`
+
+		ScanConfigType json.RawMessage `json:"scanConfigType,omitempty"`
+	}
+	buf := bytes.NewBuffer(raw)
+	dec := json.NewDecoder(buf)
+	dec.UseNumber()
+
+	if err := dec.Decode(&data); err != nil {
+		return err
+	}
+
+	var propScanConfigType RuntimeScheduleScanConfigType
+	if string(data.ScanConfigType) != "null" {
+		scanConfigType, err := UnmarshalRuntimeScheduleScanConfigType(bytes.NewBuffer(data.ScanConfigType), runtime.JSONConsumer())
+		if err != nil && err != io.EOF {
+			return err
+		}
+		propScanConfigType = scanConfigType
+	}
+
+	var result RuntimeScheduleScanConfig
+
+	// dockerCISBenchmarkScan
+	result.DockerCISBenchmarkScan = data.DockerCISBenchmarkScan
+
+	// namespaces
+	result.Namespaces = data.Namespaces
+
+	// scanConfigType
+	result.scanConfigTypeField = propScanConfigType
+
+	*m = result
+
+	return nil
+}
+
+// MarshalJSON marshals this object with a polymorphic type to a JSON structure
+func (m RuntimeScheduleScanConfig) MarshalJSON() ([]byte, error) {
+	var b1, b2, b3 []byte
+	var err error
+	b1, err = json.Marshal(struct {
+		DockerCISBenchmarkScan bool `json:"dockerCISBenchmarkScan,omitempty"`
+
+		Namespaces []string `json:"namespaces"`
+	}{
+
+		DockerCISBenchmarkScan: m.DockerCISBenchmarkScan,
+
+		Namespaces: m.Namespaces,
+	})
+	if err != nil {
+		return nil, err
+	}
+	b2, err = json.Marshal(struct {
+		ScanConfigType RuntimeScheduleScanConfigType `json:"scanConfigType,omitempty"`
+	}{
+
+		ScanConfigType: m.scanConfigTypeField,
+	})
+	if err != nil {
+		return nil, err
+	}
+
+	return swag.ConcatJSON(b1, b2, b3), nil
 }
 
 // Validate validates this runtime schedule scan config
 func (m *RuntimeScheduleScanConfig) Validate(formats strfmt.Registry) error {
 	var res []error
 
-	if err := m.validateScanInterval(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateScanTime(formats); err != nil {
+	if err := m.validateScanConfigType(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -49,31 +127,14 @@ func (m *RuntimeScheduleScanConfig) Validate(formats strfmt.Registry) error {
 	return nil
 }
 
-func (m *RuntimeScheduleScanConfig) validateScanInterval(formats strfmt.Registry) error {
-	if swag.IsZero(m.ScanInterval) { // not required
+func (m *RuntimeScheduleScanConfig) validateScanConfigType(formats strfmt.Registry) error {
+	if swag.IsZero(m.ScanConfigType()) { // not required
 		return nil
 	}
 
-	if m.ScanInterval != nil {
-		if err := m.ScanInterval.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("scanInterval")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *RuntimeScheduleScanConfig) validateScanTime(formats strfmt.Registry) error {
-	if swag.IsZero(m.ScanTime) { // not required
-		return nil
-	}
-
-	if err := m.ScanTime.Validate(formats); err != nil {
+	if err := m.ScanConfigType().Validate(formats); err != nil {
 		if ve, ok := err.(*errors.Validation); ok {
-			return ve.ValidateName("scanTime")
+			return ve.ValidateName("scanConfigType")
 		}
 		return err
 	}
@@ -85,11 +146,7 @@ func (m *RuntimeScheduleScanConfig) validateScanTime(formats strfmt.Registry) er
 func (m *RuntimeScheduleScanConfig) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
 	var res []error
 
-	if err := m.contextValidateScanInterval(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.contextValidateScanTime(ctx, formats); err != nil {
+	if err := m.contextValidateScanConfigType(ctx, formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -99,25 +156,11 @@ func (m *RuntimeScheduleScanConfig) ContextValidate(ctx context.Context, formats
 	return nil
 }
 
-func (m *RuntimeScheduleScanConfig) contextValidateScanInterval(ctx context.Context, formats strfmt.Registry) error {
+func (m *RuntimeScheduleScanConfig) contextValidateScanConfigType(ctx context.Context, formats strfmt.Registry) error {
 
-	if m.ScanInterval != nil {
-		if err := m.ScanInterval.ContextValidate(ctx, formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("scanInterval")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *RuntimeScheduleScanConfig) contextValidateScanTime(ctx context.Context, formats strfmt.Registry) error {
-
-	if err := m.ScanTime.ContextValidate(ctx, formats); err != nil {
+	if err := m.ScanConfigType().ContextValidate(ctx, formats); err != nil {
 		if ve, ok := err.(*errors.Validation); ok {
-			return ve.ValidateName("scanTime")
+			return ve.ValidateName("scanConfigType")
 		}
 		return err
 	}
