# api/server/models/scan_interval.go
@@ -1,120 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// ScanInterval scan interval
-//
-// swagger:model ScanInterval
-type ScanInterval struct {
-
-	// at
-	// Format: date-time
-	At strfmt.DateTime `json:"at,omitempty"`
-
-	// repeat every
-	RepeatEvery uint32 `json:"repeatEvery,omitempty"`
-
-	// time unit
-	TimeUnit TimeUnit `json:"timeUnit,omitempty"`
-}
-
-// Validate validates this scan interval
-func (m *ScanInterval) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateAt(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateTimeUnit(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *ScanInterval) validateAt(formats strfmt.Registry) error {
-	if swag.IsZero(m.At) { // not required
-		return nil
-	}
-
-	if err := validate.FormatOf("at", "body", "date-time", m.At.String(), formats); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func (m *ScanInterval) validateTimeUnit(formats strfmt.Registry) error {
-	if swag.IsZero(m.TimeUnit) { // not required
-		return nil
-	}
-
-	if err := m.TimeUnit.Validate(formats); err != nil {
-		if ve, ok := err.(*errors.Validation); ok {
-			return ve.ValidateName("timeUnit")
-		}
-		return err
-	}
-
-	return nil
-}
-
-// ContextValidate validate this scan interval based on the context it is used
-func (m *ScanInterval) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.contextValidateTimeUnit(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *ScanInterval) contextValidateTimeUnit(ctx context.Context, formats strfmt.Registry) error {
-
-	if err := m.TimeUnit.ContextValidate(ctx, formats); err != nil {
-		if ve, ok := err.(*errors.Validation); ok {
-			return ve.ValidateName("timeUnit")
-		}
-		return err
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *ScanInterval) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *ScanInterval) UnmarshalBinary(b []byte) error {
-	var res ScanInterval
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
