# api/swagger.yaml
@@ -679,35 +679,6 @@ definitions:
       cisDockerBenchmarkScanEnabled:
         type: 'boolean'
 
-  ScanInterval:
-    type: object
-    properties:
-      repeatEvery:
-        type: 'integer'
-        format: 'uint32'
-      timeUnit:
-        $ref: '#/definitions/TimeUnit'
-      at:
-        type: 'string'
-        format: date-time
-
-  TimeUnit:
-    description: 'time unit of schedule scan'
-    type: 'string'
-    readOnly: true
-    enum:
-      - HOURS
-      - DAYS
-      - WEEKS
-
-  ScanTime:
-    description: 'scan time of scheduled scan'
-    type: 'string'
-    readOnly: true
-    enum:
-      - LATER
-      - REPETITIVE
-
   RuntimeScheduleScanConfig:
     type: object
     properties:
@@ -717,10 +688,81 @@ definitions:
           type: 'string'  #empty = all
       dockerCISBenchmarkScan:
         type: 'boolean'
-      scanTime:
-        $ref: '#/definitions/ScanTime'
-      scanInterval:
-        $ref: '#/definitions/ScanInterval'
+      scanConfigType:
+        $ref: '#/definitions/RuntimeScheduleScanConfigType'
+
+  RuntimeScheduleScanConfigType:
+    type: object
+    discriminator: 'ScheduleScanConfigType'
+    properties:
+      ScheduleScanConfigType:
+        type: 'string'
+        enum:
+          - 'SingleScheduleScanConfig'
+          - 'ByHoursScheduleScanConfig'
+          - 'ByDaysScheduleScanConfig'
+          - 'WeeklyScheduleScanConfig'
+
+  SingleScheduleScanConfig:
+    allOf:
+      - $ref: '#/definitions/RuntimeScheduleScanConfigType'
+      - type: 'object'
+        properties:
+          operationTime:
+            type: 'string'
+            format: 'date-time'
+        required:
+          - operationTime
+
+  ByHoursScheduleScanConfig:
+    allOf:
+      - $ref: '#/definitions/RuntimeScheduleScanConfigType'
+      - type: 'object'
+        properties:
+          hoursInterval:
+            type: 'integer'
+            minimum: 1
+            default: 1
+
+  ByDaysScheduleScanConfig:
+    allOf:
+      - $ref: '#/definitions/RuntimeScheduleScanConfigType'
+      - type: 'object'
+        properties:
+          daysInterval:
+            type: 'integer'
+            minimum: 1
+            default: 1
+          timeOfDay:
+            $ref: '#/definitions/TimeOfDay'
+
+  WeeklyScheduleScanConfig:
+    allOf:
+      - $ref: '#/definitions/RuntimeScheduleScanConfigType'
+      - type: 'object'
+        properties:
+          dayInWeek:
+            description: '1 - 7 which represents sun- sat'
+            type: 'integer'
+            minimum: 1
+            maximum: 7
+            default: 1
+          timeOfDay:
+            $ref: '#/definitions/TimeOfDay'
+
+  TimeOfDay:
+    type: 'object'
+    properties:
+      hour:
+        type: 'integer'
+        minimum: 0
+        maximum: 23
+        default: 0
+      minute:
+        type: 'integer'
+        minimum: 0
+        maximum: 59
+        default: 0
 
   Progress:
     type: object
@@ -735,6 +777,11 @@ definitions:
         type: 'array'
         items:
           type: 'string'
+      scanType:
+        $ref: '#/definitions/ScanType'
+      startTime:
+        type: 'string'
+        format: date-time
 
   RuntimeScanResults:
     type: object
@@ -758,8 +805,6 @@ definitions:
         type: 'array'
         items:
           $ref: '#/definitions/RuntimeScanFailure'
-      scanType:
-        $ref: '#/definitions/ScanType'
 
   ScanType:
     description: 'scan type'
@@ -768,7 +813,6 @@ definitions:
     enum:
       - QUICK
       - SCHEDULE
-
 
   RuntimeScanFailure:
     type: object
